--- a/_posts/2014-09-6-shell-2.md
+++ b/_posts/2014-09-6-shell-2.md
@@ -46,27 +46,27 @@ Total value : 4
 |/	|除法	|``` `expr $b / $a` ```结果为 2。|
 |%	|取余	|``` `expr $b % $a` ```结果为 0。|
 |=	|赋值	|a=$b 将把变量 b 的值赋给 a。|
-|==	|相等。|用于比较两个数字，相同则返回 true。	[ $a == $b ] 返回 false。|
-|!=	|不相等。|用于比较两个数字，不相同则返回 true。	[ $a != $b ] 返回 true。|
+|==	|相等。|用于比较两个数字，相同则返回 true。	```[ $a == $b ]``` 返回 false。|
+|!=	|不相等。|用于比较两个数字，不相同则返回 true。	```[ $a != $b ] ```返回 true。|
 
 #####关系运算符列表
 
 |运算符	|说明	|举例|
 |:---|:---|:---|
-|-eq|	检测两个数是否相等，相等返回 true。|	[ $a -eq $b ] 返回 true。|
-|-ne|	检测两个数是否相等，不相等返回 true。|	[ $a -ne $b ] 返回 true。|
-|-gt|	检测左边的数是否大于右边的，如果是，则返回 true。|	[ $a -gt $b ] 返回 false。|
-|-lt|	检测左边的数是否小于右边的，如果是，则返回 true。	|[ $a -lt $b ] 返回 true。|
-|-ge|	检测左边的数是否大等于右边的，如果是，则返回 true。|	[ $a -ge $b ] 返回 false。|
-|-le|	检测左边的数是否小于等于右边的，如果是，则返回 true。|	[ $a -le $b ] 返回 true。|
+|-eq|	检测两个数是否相等，相等返回 true。|	```[ $a -eq $b ] ```返回 true。|
+|-ne|	检测两个数是否相等，不相等返回 true。|	```[ $a -ne $b ]``` 返回 true。|
+|-gt|	检测左边的数是否大于右边的，如果是，则返回 true。|	```[ $a -gt $b ] ```返回 false。|
+|-lt|	检测左边的数是否小于右边的，如果是，则返回 true。	|```[ $a -lt $b ]```返回 true。|
+|-ge|	检测左边的数是否大等于右边的，如果是，则返回 true。|	```[ $a -ge $b ]``` 返回 false。|
+|-le|	检测左边的数是否小于等于右边的，如果是，则返回 true。|	```[ $a -le $b ]``` 返回 true。|
 
 #####布尔运算符列表
 
 |运算符|	说明|	举例|
 |:---|:---|:---|
 |!|	非运算，表达式为 true 则返回 false，否则返回 true。|	[ ! false ] 返回 true。|
-|-o|	或运算，有一个表达式为 true 则返回 true。	|[ $a -lt 20 -o $b -gt 100 ] 返回 true。|
-|-a|	与运算，两个表达式都为 true 才返回 true。	|[ $a -lt 20 -a $b -gt 100 ] 返回 false。|
+|-o|	或运算，有一个表达式为 true 则返回 true。	|```[ $a -lt 20 -o $b -gt 100 ]``` 返回 true。|
+|-a|	与运算，两个表达式都为 true 才返回 true。	|```[ $a -lt 20 -a $b -gt 100 ]``` 返回 false。|
 
 
 
@@ -74,8 +74,8 @@ Total value : 4
 
 |运算符|	说明|	举例|
 |:---|:---|:---|
-|=	|检测两个字符串是否相等，相等返回 true。	|[ $a = $b ] 返回 false。|
-|!=	|检测两个字符串是否相等，不相等返回 true。|	[ $a != $b ] 返回 true。|
+|=	|检测两个字符串是否相等，相等返回 true。	|```[ $a = $b ]``` 返回 false。|
+|!=	|检测两个字符串是否相等，不相等返回 true。|```	[ $a != $b ]``` 返回 true。|
 |-z	|检测字符串长度是否为0，为0返回 true。	|[ -z $a ] 返回 false。|
 |-n	|检测字符串长度是否为0，不为0返回 true。|	[ -z $a ] 返回 true。|
 |str|	检测字符串是否为空，不为空返回 true。|	[ $a ] 返回 true。|
@@ -85,7 +85,7 @@ Total value : 4
 |操作符	|说明|	举例|
 |:---|:---|:---|
 |-b file	|检测文件是否是块设备文件，如果是，则返回 true。|	[ -b $file ] 返回 false。|
-|-c file	|检测文件是否是目录，如果是，则返回 true。|	[ -d $file ] 返回 false。|
+|-d file	|检测文件是否是目录，如果是，则返回 true。|	[ -d $file ] 返回 false。|
 |-f file	|检测文件是否是普通文件（既不是目录，也不是设备文件），如果是，则返回 true。|	[ -f $file ] 返回 true。|
 |-g file	|检测文件是否设置了 SGID 位，如果是，则返回 true。|	[ -g $file ] 返回 false。|
 |-k file	|检测文件是否设置了粘着位(Sticky Bit)，如果是，则返回 true。|	[ -k $file ] 返回 false。|
