--- a/_posts/2014-12-17-OS.md
+++ b/_posts/2014-12-17-OS.md
@@ -13,3 +13,7 @@ tags: linux os
 Unix演变最为复杂多样,由Unix衍生的系统主要有两个,一个是BSD,另一个是System V.从BSD4.3开始就已经开源了,BSD最主要的3个分支是FreeBSD,NetBSD和OpenBSD.其中Mac OS X的内核是基于FreeBSD(其实还有Mach).
 
 在Unix演化期间有许多重大事件:
+
+1. GNU
+2. POSIX
+3. Linux
