--- a/_posts/2014-12-17-OS.md
+++ b/_posts/2014-12-17-OS.md
@@ -17,3 +17,13 @@ Unix演变最为复杂多样,由Unix衍生的系统主要有两个,一个是BSD,
 1. GNU
 2. POSIX
 3. Linux
+
+Linux其实就是Linus山寨Unix的内核，自己实现了Unix系统内核，大神终究是大神，他有两个牛逼的东西，一个是Linux，一个是git。
+
+GNU其实比Linux早一些，因为开源的精神走到了一起，GNU在Linux出来之前也有自己的内核，不过名不见经传。
+
+大家经常接触的就是图上绿色的部分，而其他的Unix都属于商业用途。
+
+BSD其实不是一个内核，它其实是一个完整的操作系统。而像常见的Ubuntu，Fedora都是一些基于Linux的内核的系统。
+
+其实现在的Unix已经演化成了一种规范，不同版本的实现也不一样，而这种规范促进着Unix或者类Unix系统的欣欣向荣，相信终有一日他会打败windows。
